# sonogram

./: .editorconfig  CMakeLists.txt
.github/actions/: ctest.yml
.github/actions/ctest/: action.yml
.github/workflows/: lingccmn.yml  lingccmx.yml  macclgmx.yml  winmsvmn.yml  winmsvmx.yml  winos-min-flash.yml
test/: CMakeLists.txt  hello.cxx
test/sons/: hello.son
testing/: CMakeLists.txt  hello.cxx
